@@ -78,6 +78,7 @@ cdef extern from 'fcntl.h':
 
 
 cdef extern from 'Python.h':
+    int PyErr_CheckSignals() except -1
     char * PyString_AS_STRING(object)
     ctypedef int Py_ssize_t # Required for older pyrex versions
     ctypedef struct PyObject:
@@ -271,6 +272,12 @@ cdef class UTF8DirReader:
         return result
 
 
+cdef raise_os_error(int errnum, char *msg_prefix, path):
+    if errnum == EINTR:
+        PyErr_CheckSignals()
+    raise OSError(errnum, msg_prefix + strerror(errnum), path)
+
+
 cdef _read_dir(path):
     """Like os.listdir, this reads the contents of a directory.
 
@@ -298,16 +305,16 @@ cdef _read_dir(path):
         # passing full paths every time.
         orig_dir_fd = open(".", O_RDONLY, 0)
         if orig_dir_fd == -1:
-            raise OSError(errno, "open: " + strerror(errno), ".")
+            raise_os_error(errno, "open: ", ".")
         if -1 == chdir(path):
-            raise OSError(errno, "chdir: " + strerror(errno), path)
+            raise_os_error(errno, "chdir: ", path)
     else:
         orig_dir_fd = -1
 
     try:
         the_dir = opendir(".")
         if NULL == the_dir:
-            raise OSError(errno, "opendir: " + strerror(errno), path)
+            raise_os_error(errno, "opendir: ", path)
         try:
             result = []
             entry = &sentinel
@@ -319,6 +326,8 @@ cdef _read_dir(path):
                     errno = 0
                     entry = readdir(the_dir)
                     if entry == NULL and (errno == EAGAIN or errno == EINTR):
+                        if errno == EINTR:
+                            PyErr_CheckSignals()
                         # try again
                         continue
                     else:
@@ -330,7 +339,7 @@ cdef _read_dir(path):
                         # we consider ENOTDIR to be 'no error'.
                         continue
                     else:
-                        raise OSError(errno, "readdir: " + strerror(errno), path)
+                        raise_os_error(errno, "readdir: ", path)
                 name = entry.d_name
                 if not (name[0] == c"." and (
                     (name[1] == 0) or 
@@ -340,7 +349,7 @@ cdef _read_dir(path):
                     stat_result = lstat(entry.d_name, &statvalue._st)
                     if stat_result != 0:
                         if errno != ENOENT:
-                            raise OSError(errno, "lstat: " + strerror(errno),
+                            raise_os_error(errno, "lstat: ",
                                 path + "/" + entry.d_name)
                         else:
                             # the file seems to have disappeared after being
@@ -358,7 +367,7 @@ cdef _read_dir(path):
                         statvalue, None))
         finally:
             if -1 == closedir(the_dir):
-                raise OSError(errno, "closedir: " + strerror(errno), path)
+                raise_os_error(errno, "closedir: ", path)
     finally:
         if -1 != orig_dir_fd:
             failed = False
@@ -366,7 +375,7 @@ cdef _read_dir(path):
                 # try to close the original directory anyhow
                 failed = True
             if -1 == close(orig_dir_fd) or failed:
-                raise OSError(errno, "return to orig_dir: " + strerror(errno))
+                raise_os_error(errno, "return to orig_dir: ", "")
 
     return result
 
